--- a/src/block/timeline/style.scss
+++ b/src/block/timeline/style.scss
@@ -38,6 +38,10 @@
 .stk-block-timeline--left .stk-block-timeline__date {
 	grid-column: 3 / 4;
 }
+// prevents content to be overlapped by background
+.stk-block-timeline > .stk-inner-blocks > * {
+	z-index: 2;
+}
 .stk-block-timeline > .stk-inner-blocks::after {
 	content: "";
 	position: absolute;
@@ -47,6 +51,7 @@
 	bottom: 0;
 	background: var(--fixed-bg);
 	background-attachment: fixed;
+	z-index: 2;
 }
 .stk-block-timeline__middle {
 	border-radius: var(--line-dot-border-radius, 100%);
